Fix route config

--- a/angular-shell-multi-ngversion/src/app/app.component.html
+++ b/angular-shell-multi-ngversion/src/app/app.component.html
@@ -228,7 +228,7 @@
       <h1>Hello, {{ title }}</h1>
       <h2>Angular {{ ngVersion }}</h2>
       <p>Congratulations! Your app is running. 🎉</p>
-      <a aria-label="MFE1" target="_blank" rel="noopener" routerLink="/mfe"></a>
+      <a aria-label="MFE1" routerLink="/mfe">Load MFE</a>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
